--- a/analysis/_site.yml
+++ b/analysis/_site.yml
@@ -5,10 +5,9 @@ navbar:
   left:
   - text: Home
     href: index.html
-  - text: About
-    href: about.html
-  - text: License
-    href: license.html
+  right:
+  - text: GitHub Pages
+    href: https://github.com/KaranSShakya
 output:
   workflowr::wflow_html:
     toc: yes
